objects/Bus__c.object
<CustomObject>
    <fields>
        <fullName>BusDestination__c</fullName>
        <label>BusDestination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BNG</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>DMM</fullName>
                </value>
                <value>
                    <fullName>HNDP</fullName>
                </value>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>Tirupathi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusLookUpField1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bus</label>
        <referenceTo>Bus__c</referenceTo>
        <relationshipLabel>Buses</relationshipLabel>
        <relationshipName>Buses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusSource__c</fullName>
        <label>BusSource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amaravathi</fullName>
                </value>
                <value>
                    <fullName>BNG</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>Kurnool</fullName>
                </value>
                <value>
                    <fullName>Tirupathi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusTextField1__c</fullName>
        <label>BusTextField1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>